Fix embed videos overflowing issue

--- a/assets/css/scss/screen.scss
+++ b/assets/css/scss/screen.scss
@@ -937,6 +937,12 @@ article.home-post {
     margin-right: auto;
 }
 
+.fluid-width-video-container {
+    max-width: 46rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 /* Preventing full-width image overlap with post image.  */
 
